--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,7 @@ form#contact-form input:focus,form#contact-form select:focus,form#contact-form t
 .company-social {
 	margin-left: 0;
 	padding-left: 0;
+	float: left;
 	margin-top: 10px;
 }
 
